tests/integrations/json-basic-fail/tests/actual_tests/bad_pattern.rs
use json_basic_fail::add;

fn main() {
    add("42", 3);
    //~^ ERROR: miesmätsched types
}
